--- a/index.html
+++ b/index.html
@@ -30,7 +30,39 @@
     
         <!-- Doodle Stage -->
         <div id="stage">
+            <!-- Elements -->
+            <svg class="heart1"xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 42 37" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M20.7179 7.97194C20.3148 5.44359 17.332 0.386902 8.62532 0.386902C4.58874 0.386902 2.3023 1.67761 1.03093 3.31417C-1.34299 6.36999 0.812105 10.5523 3.17222 13.6187L20.7179 36.4158L38.2636 13.6187C40.6237 10.5523 42.7788 6.36999 40.4049 3.31417C39.1335 1.67761 36.847 0.386902 32.8105 0.386902C24.1038 0.386902 21.121 5.44359 20.7179 7.97194Z" fill="#FF3341"/>
+                </svg>
+            <svg class="heart2" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 19 19" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.27889 4.17455C9.07367 2.8873 7.55503 0.312805 3.12224 0.312805C-1.64957 0.312805 0.0538575 6.67002 2.96427 10.4515L9.27889 18.6561L15.5935 10.4515C18.5039 6.67002 20.2073 0.312805 15.4355 0.312805C11.0027 0.312805 9.48411 2.8873 9.27889 4.17455Z" fill="#FF99BE"/>
+                </svg>
+                <svg class="heart3"xmlns="http://www.w3.org/2000/svg" width="55" height="47" viewBox="0 0 42 37" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20.7179 7.97194C20.3148 5.44359 17.332 0.386902 8.62532 0.386902C4.58874 0.386902 2.3023 1.67761 1.03093 3.31417C-1.34299 6.36999 0.812105 10.5523 3.17222 13.6187L20.7179 36.4158L38.2636 13.6187C40.6237 10.5523 42.7788 6.36999 40.4049 3.31417C39.1335 1.67761 36.847 0.386902 32.8105 0.386902C24.1038 0.386902 21.121 5.44359 20.7179 7.97194Z" fill="#FF3341"/>
+                    </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="110" height="146" viewBox="0 0 110 146" fill="none">
+                <ellipse cx="45.7752" cy="132.136" rx="9.27273" ry="13.1364" fill="black"/>
+                <ellipse cx="89.7945" cy="93.6316" rx="6.95455" ry="13.1364" transform="rotate(-23.1855 89.7945 93.6316)" fill="black"/>
+                <ellipse cx="20.2499" cy="93.6317" rx="6.95455" ry="13.1364" transform="rotate(23.19 20.2499 93.6317)" fill="black"/>
+                <ellipse cx="17.1843" cy="12.3636" rx="13.1364" ry="12.3636" fill="black"/>
+                <ellipse cx="17.9571" cy="13.1364" rx="9.27273" ry="8.5" fill="#F1828D"/>
+                <ellipse cx="92.9115" cy="12.3636" rx="13.1364" ry="12.3636" fill="black"/>
+                <ellipse cx="92.1389" cy="13.1364" rx="9.27273" ry="8.5" fill="#F1828D"/>
+                <ellipse cx="67.4116" cy="132.136" rx="9.27273" ry="13.1364" fill="black"/>
+                <path d="M89.0934 99.6818C89.0934 116.193 74.0176 129.864 55.0479 129.864C36.0782 129.864 21.0024 116.193 21.0024 99.6818C21.0024 83.1705 36.0782 69.5 55.0479 69.5C74.0176 69.5 89.0934 83.1705 89.0934 99.6818Z" fill="white" stroke="black" stroke-width="3"/>
+                <path d="M107.639 47.1364C107.639 71.257 84.3436 91.2273 55.0479 91.2273C25.7522 91.2273 2.45703 71.257 2.45703 47.1364C2.45703 23.0157 25.7522 3.04547 55.0479 3.04547C84.3436 3.04547 107.639 23.0157 107.639 47.1364Z" fill="white" stroke="black" stroke-width="3"/>
+                <path d="M55.048 61.8182C54.8102 62.8485 53.5501 64.9091 50.4116 64.9091" stroke="black" stroke-linecap="round"/>
+                <path d="M55.048 61.8182C55.2857 62.8485 56.5459 64.9091 59.6843 64.9091" stroke="black" stroke-linecap="round"/>
+                <path d="M67.4429 40.2953C67.0038 32.1674 71.2557 27.8182 75.8603 27.8182C83.1797 27.8182 93.2439 35.6609 89.9502 44.7515C87.496 51.5249 80.6179 50.99 79.154 50.99C77.6901 50.99 67.9919 50.4553 67.4429 40.2953Z" fill="black"/>
+                <path d="M42.653 40.2953C43.0922 32.1674 38.8403 27.8182 34.2357 27.8182C26.9162 27.8182 16.8521 35.6609 20.1458 44.7515C22.5999 51.5249 29.478 50.99 30.9419 50.99C32.4058 50.99 42.1041 50.4553 42.653 40.2953Z" fill="black"/>
+                <circle cx="34.9571" cy="37.0909" r="3.09091" fill="white"/>
+                <circle cx="31.0933" cy="40.9546" r="0.772727" fill="white"/>
+                <circle cx="75.1388" cy="37.0909" r="3.09091" fill="white"/>
+                <circle cx="79.0025" cy="40.9546" r="0.772727" fill="white"/>
+                <rect x="50.4116" y="55.6364" width="9.27273" height="7.72727" rx="3" fill="black"/>
+                </svg>
 
+    
         </div>
 
         <input type="text" />
